syntax = "proto3";
package fitglue;

import "google/protobuf/timestamp.proto";

option go_package = "fitglue/pkg/shared/pb";

message UserRecord {
  string user_id = 1;
  google.protobuf.Timestamp created_at = 2;
  UserIntegrations integrations = 3;
}

message UserIntegrations {
  HevyIntegration hevy = 1;
}

message HevyIntegration {
  bool enabled = 1;
  string api_key = 2;
  string user_id = 3;
}
